feat: Add initial English and Chinese i18n locale files.

--- a/src/i18n/locales/en-US.json
+++ b/src/i18n/locales/en-US.json
@@ -345,24 +345,16 @@
     "material": "Material",
     "labName": "Laboratory",
     "status": "Workflow Status",
-    "in_transit": "In Transit",
-    "in_production": "In Production",
-    "completed": "Completed",
-    "arrived": "Arrived",
-    "tryIn": "Try-in Success",
+    "received": "Received",
+    "designing": "Designing",
+    "milling": "Milling",
+    "qc": "QC Testing",
+    "shipping": "Shipping",
+    "completed": "Delivered",
     "newOrder": "New Lab Order",
     "manageOrders": "Manage Orders",
     "pendingReceive": "Pending Orders",
-    "inProduction": "In Production",
     "urgent": "Urgent / Priority",
-    "stockLevel": "Material Stock Alerts",
-    "viewAll": "View All Orders",
-    "digitalOrderManagement": "Digital Order Management",
-    "sent": "Sent",
-    "received": "Received",
-    "production": "Production",
-    "shipped": "Shipped",
-    "estDelivery": "Est. Delivery",
     "review3d": "Review 3D",
     "kanbanTitle": "Lab Production Kanban",
     "technicianDashboard": "Technician Dashboard",
@@ -378,7 +370,7 @@
     "awaitingIntake": "Awaiting Intake",
     "activeWorkstations": "Active Workstations",
     "dueSoon": "Due in 24h",
-    "lowStock": "Low Zirconia Stock",
+    "lowStock": "Low Material Stock",
     "preview3d": "3D Preview",
     "liveConnection": "Live Connection",
     "measurements": "Measurements",
@@ -390,7 +382,6 @@
     "marginLine": "Margin Line",
     "requestChanges": "Request Changes",
     "approveDesign": "Approve Design",
-    "urgentLabel": "Urgent",
     "trackingTip": "Track automated production workflow",
     "productionProgress": "Production Progress",
     "noOrders": "No Lab Orders",
@@ -399,7 +390,9 @@
     "estimatedDate": "Estimated Delivery",
     "designApproved": "Design approved. Moving to production line.",
     "changesRequested": "Design feedback sent back to technician.",
-    "rush": "Rush"
+    "rush": "Rush",
+    "orderVolume": "Order Trend",
+    "orderCount": "Lab Tasks"
   },
   "finance": {
     "title": "Finance Management",
