--- a/src/i18n/locales/zh-CN.json
+++ b/src/i18n/locales/zh-CN.json
@@ -343,24 +343,16 @@
     "material": "材料",
     "labName": "技工中心",
     "status": "当前状态",
-    "in_transit": "正在寄送",
-    "in_production": "生产中",
+    "received": "已接收",
+    "designing": "设计中",
+    "milling": "加工中",
+    "qc": "质检中",
+    "shipping": "发货中",
     "completed": "已完成",
-    "arrived": "已入库",
-    "tryIn": "试戴完成",
     "newOrder": "新建工单",
     "manageOrders": "工单管理",
     "pendingReceive": "待接收",
-    "inProduction": "生产中",
-    "urgent": "紧急加急",
-    "stockLevel": "库存预警",
-    "viewAll": "查看全部",
-    "digitalOrderManagement": "数字化工单管理系统",
-    "sent": "已发送",
-    "received": "已接收",
-    "production": "生产中",
-    "shipped": "已发货",
-    "estDelivery": "预计送达",
+    "urgent": "加急",
     "review3d": "审核 3D",
     "kanbanTitle": "加工中心生产看板",
     "technicianDashboard": "技工生产控制台",
@@ -376,7 +368,7 @@
     "awaitingIntake": "等待扫码入库",
     "activeWorkstations": "活跃生产工位",
     "dueSoon": "24h 内到期",
-    "lowStock": "氧化锆方块库存低",
+    "lowStock": "物料库存预警",
     "preview3d": "3D 预览",
     "liveConnection": "实时连接",
     "measurements": "测量工具",
@@ -388,7 +380,6 @@
     "marginLine": "边缘线",
     "requestChanges": "请求修改",
     "approveDesign": "批准设计",
-    "urgentLabel": "加急",
     "trackingTip": "跟踪自动化加工流程",
     "productionProgress": "生产进度",
     "noOrders": "暂无加工订单",
@@ -397,7 +388,9 @@
     "estimatedDate": "预计交付日期",
     "designApproved": "设计已批准，正在进入加工产线",
     "changesRequested": "已反馈修改意见给技工师",
-    "rush": "加急"
+    "rush": "加急",
+    "orderVolume": "订单趋势",
+    "orderCount": "个加工任务"
   },
   "finance": {
     "title": "财务管理",
